Fixed some layout issues.

--- a/about/css/styles.css
+++ b/about/css/styles.css
@@ -100,35 +100,6 @@ h3{
     width: 85%;
 }
 
-.content p.entry-title {
-	font-size: 30px;
-	color: #FFFFFF;
-	margin-bottom: 10px;
-	margin-top: 60px;
-	margin-left:5px;
-}
-
-.content p.date {
-	font-size: 20px;
-	color: #FFFFFF;
-	margin-bottom: 20px;
-	margin-top: 5px;
-	margin-left:5px;
-}
-
-.content p {
-	font-size:16px;
-	line-height: 24px;
-	color: #FFFFFF;
-	margin-left: 5px;
-	margin-right: 20px;
-}
-
-.content img.displayed {
-	position:relative;
-	margin-top: 5px;
-}
-
 .btn, .btn-primary{
     background-color: #901389 !important;
 }
@@ -138,6 +109,19 @@ h3{
     height: 100;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+#aboutimg{
+    width: 100;
+    height: 100;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#about{
+    margin: 0 auto;
+    padding: 0;
+    border-bottom: 0.5px solid #ccc;
 }
 
 .personInfo{
