--- a/blog/styles.css
+++ b/blog/styles.css
@@ -89,6 +89,7 @@ a {
 
 .imgPosts{
 	margin: 0 auto;
+	width: 504px;
 	float: center;
 }
 
